<resources>
    <string name="app_name">评估神</string>
    <string name="action_cordova">Cordova</string>
    <string name="action_login">Login</string>
    <string name="action_scrolling">ScrollingActiivty</string>
    <string name="action_dialog">DialogActivity</string>
    <string name="action_webviewDemo">WebviewDemo</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="welcome_bg">welcome bg</string>
    <string name="splash_count_down">跳过&#160;%1$d</string>
    <string name="guide_title1">全新体验</string>
    <string name="guide_subtitle1">视觉更美观 功能更强大</string>
    <string name="guide_title2">还款测算</string>
    <string name="guide_subtitle2">轻松滑一滑 还款早知道</string>
    <string name="guide_title3">智能录单</string>
    <string name="guide_subtitle3">一键智能识别 录单更加轻松</string>
    <string name="guide_title4">文字文字文字文字文字</string>
    <string name="guide_subtitle4">V2.0</string>
    <string name="enter_app">立刻体验</string>
    <string name="bottom_tab_0">智能评估</string>
    <string name="bottom_tab_1">首页</string>
    <string name="bottom_tab_2">工具</string>
    <string name="bottom_tab_3">发现</string>
    <string name="bottom_tab_4">我</string>
    <string name="bottom_tab_5">工具</string>
    <string name="home_quick_enter_loan">信用贷款</string>
    <string name="home_quick_enter_progress">查询进度</string>
    <string name="home_quick_enter_date">待办事项</string>
    <string name="home_quick_enter_money">我的佣金</string>
    <string name="home_quick_enter_trial">还款测算</string>
    <string name="home_quick_enter_loan_history">历史推荐</string>
    <string name="home_quick_enter_help">我要吐槽</string>
    <string name="home_quick_enter_share">分享有礼</string>
    <string name="home_quick_enter_assessment">智能评估</string>
    <string name="home_quick_enter_title">常用工具</string>
    <string name="home_quick_enter_brand">品牌专区</string>
    <string name="title_products">全部产品</string>
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_set">设置密码（8-20位字母、数字组合）</string>
    <string name="action_sign_in">登录</string>
    <string name="action_enter">确认</string>
    <string name="action_next">下一步</string>
    <string name="action_recommend">立即推荐</string>
    <string name="error_invalid_email">请确认你的手机号码！</string>
    <string name="error_invalid_password">密码不正确！</string>
    <string name="error_incorrect_password">密码不正确！</string>
    <string name="error_field_required">请输入%1$s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_forget_pwd">忘记密码?</string>
    <string name="action_login_problem">登录遇到问题？</string>
    <string name="action_login_otp">短信登录</string>
    <string name="title_login_otp">用短信验证码登录</string>
    <string name="action_login_account">账号登录</string>
    <string name="action_reset_pwd">重置密码</string>
    <string name="prompt_mobile">手机号码</string>
    <string name="prompt_mobile_resetpwd">请输入注册手机号码</string>
    <string name="prompt_password_ensure">确认密码</string>
    <string name="prompt_password_tip">字母+数字组合，大于等于8位</string>
    <string name="prompt_password_ensure_tip">请再次输入密码</string>
    <string name="prompt_password_old">原密码</string>
    <string name="prompt_password_new">新密码</string>
    <string name="prompt_invite_code">邀请码(选填)</string>
    <string name="prompt_bz_city">常驻业务城市</string>
    <string name="prompt_otp">验证码</string>
    <string name="action_get_otp">获取短信验证码</string>
    <string name="action_get_otp_voice">收不到短信验证码？点我通过电话语音获取</string>
    <string name="action_login_with_mibang_account">使用小白帮贷账号登录</string>
    <string name="title_sign_up">注册</string>
    <string name="action_sign_up">立即注册</string>
    <string name="action_agreement">注册视为同意</string>
    <string name="action_agreement2">《评估神服务条款》、《隐私条款》</string>
    <string name="action_agreement3">等条款</string>
    <string name="action_agreement_all">注册视为同意《评估神服务条款》、《隐私条款》等条款</string>
    <string name="error_invalid_mobile">请确认你的手机号码！</string>
    <string name="error_invalid_password_ensure">密码至少8位，并且包括数字和字母！</string>
    <string name="error_invalid_otp">验证码不正确！</string>
    <string name="error_invalid_invite_code">邀请码不正确！</string>
    <string name="tip_bz_city">请选择常驻城市，选择非常驻城市可能无法正常办理业务</string>
    <string name="action_help_bz_city">如有疑问，点这获取帮助</string>
    <string name="title_bz_city">补充资料</string>
    <string name="action_progress_detail">进度明细</string>
    <string name="action_tial">还款测算</string>
    <string name="tial">测算</string>
    <string name="action_edit">修改</string>
    <string name="action_refuse">撤回</string>
    <string name="error_data">数据异常</string>
    <string name="action_loan_history_select_opration">选择你的操作</string>
    <string name="action_check_loan_history_basicinfo">查看基本资料</string>
    <string name="action_check_loan_history_authorize">查看征信授权</string>
    <string name="action_check_loan_history_insurance_info">查看保险资料</string>
    <string name="action_check_loan_history_academic_info">查看学历信息</string>
    <string name="title_check_loan_history_basicinfo">客户基础信息</string>
    <string name="title_check_loan_history_authorize">征信授权</string>
    <string name="title_check_loan_history_insurance_info">客户保险信息</string>
    <string name="title_check_loan_history_academic_info">客户学历信息</string>
    <string name="action_revoke_loan_history">撤回</string>
    <string name="action_cancel">取消</string>
    <string name="action_loan">贷款推荐</string>
    <string name="loan_step_1">扫描身份证</string>
    <string name="loan_step_2">上传资料</string>
    <string name="loan_step_3">补充信息</string>
    <string name="action_ocr">扫描身份证</string>
    <string name="tip_ocr">请根据提示依次扫描身份证正反面</string>
    <string name="tip_ocr_IDCard">身份证正面</string>
    <string name="tip_ocr_IDCard_back">身份证反面</string>
    <string name="action_ocr_scan">开始扫描</string>
    <string name="action_ocr_ensure">确认客户信息</string>
    <string name="tip_ocr_scan">扫描身份证自动填写下列信息</string>
    <string name="tip_ocr_ensure">请仔细比对客户信息，可点击修改</string>
    <string name="tip_credit_report_switch">如有纸质征信报告，拍摄上传评估，效率更高、节省查询次数</string>
    <string name="promot_credit_report_switch">是否拍摄上传纸质征信报告</string>
    <string name="prompt_name">姓名</string>
    <string name="prompt_ID_number">身份证号码</string>
    <string name="prompt_sex">性别</string>
    <string name="prompt_nationality">民族</string>
    <string name="prompt_birthday">出生日期</string>
    <string name="prompt_address">住址</string>
    <string name="prompt_grant_dept">发证机关</string>
    <string name="prompt_expiry_date">有效期至</string>
    <string name="prompt_applications_bank">申请银行</string>
    <string name="prompt_applications_interview">面签中心</string>
    <string name="prompt_custmer_marriage_state">婚姻状况</string>
    <string name="action_submit">提交</string>
    <string-array name="custmer_marriage_state">
        <item>未婚</item>
        <item>已婚</item>
        <item>离异</item>
        <item>   </item>
    </string-array>
    <string name="prompt_custmer_applyer">申请机构</string>
    <string name="prompt_custmer_mobile">客户手机</string>
    <string name="prompt_business_city">业务城市</string>
    <string name="prompt_custmer_type">客户类型</string>
    <string name="prompt_profession">职业</string>
    <string name="prompt_grade">级别</string>
    <string name="grade">用户等级</string>
    <string name="action_photo">拍摄资料影像</string>
    <string name="tip_photo">请使用原件拍照</string>
    <string name="tip_photo2">再次点击按钮可重新拍摄</string>
    <string name="photo_name">资料名称</string>
    <string name="action_preview">预览</string>
    <string name="action_take_photo">拍摄</string>
    <string name="restart_take_photo">重新拍摄</string>
    <string name="user_photo">使用照片</string>
    <string name="title_photo">拍照</string>
    <string name="title_example">示例</string>
    <string name="title_photo_example">照片示例</string>
    <string name="action_edit_insurance_info">补充保险单</string>
    <string name="prompt_insurance_amount">年缴保费</string>
    <string name="prompt_insurance_amount_unit">元</string>
    <string name="prompt_insurance_company">公司</string>
    <string name="action_add_insurance_info">添加保单</string>
    <string name="action_edit_academic_info">补充学历信息</string>
    <string name="prompt_education_diploma">学历</string>
    <string name="prompt_education_degree">学位</string>
    <string name="prompt_graduate_school_area">毕业院校地区</string>
    <string name="prompt_graduate_school">毕业院校</string>
    <string name="prompt_graduate_date">毕业时间</string>
    <string-array name="education_degree">
        <item>学士</item>
        <item>硕士</item>
        <item>博士</item>
    </string-array>
    <string-array name="education_degree_code">
        <item>BACHELOR</item>
        <item>MASTER</item>
        <item>DOCTOR</item>
    </string-array>
    <string-array name="education_diploma">
        <item>本科</item>
        <item>硕士研究生</item>
        <item>博士研究生</item>
    </string-array>
    <string-array name="education_diploma_code">
        <item>UNDERGRADUATE</item>
        <item>GRADUATE</item>
        <item>DOCTOR</item>
    </string-array>
    <string name="action_business_guie">影像资料示例</string>
    <string name="action_place_addr">网点查询</string>
    <string name="action_user_info">我的资料</string>
    <string name="action_user_upgrade">升级高级用户</string>
    <string name="action_my_brokerage">我的佣金</string>
    <string name="action_password_manager">修改密码</string>
    <string name="action_about_company">关于公司</string>
    <string name="action_check_version">检查最新版本</string>
    <string name="action_new_version">最新版本</string>
    <string name="action_check_version_isnew">已经是最新版本</string>
    <string name="action_check_version_notnew">发现新版本</string>
    <string name="action_about">关于</string>
    <string name="action_quit">退出登录</string>
    <string name="action_login_now">立即登录</string>
    <string name="action_bind_wx">去绑定微信</string>
    <string name="action_mine_balance">可提现余额</string>
    <string name="action_mine_settlement">结算中</string>
    <string name="action_mine_withdrawal">提现</string>
    <string name="action_mine_safe">账号安全</string>
    <string name="action_mine_problem">常见问题</string>
    <string name="action_mine_feedback">意见反馈</string>
    <string name="action_mine_share">分享有礼</string>
    <string name="action_mine_setting">设置</string>
    <string name="action_user_info_real_check">实名信息</string>
    <string name="user_info_check_detail_info">请确认以下为本人信息及信息真实有效</string>
    <string name="user_info_complete_detail_info">*请确认客户信息的准确性，若填写错误可能会导致贷款失败</string>
    <string name="user_info_real_detail">支持银行包括中国银行、招商银行、平安银行、工商银行、建设银行、农业银行、民生银行、兴业银行、华夏银行、中信银行、浦发银行等，查看更多>></string>
    <string name="prompt_bank_card">银行卡</string>
    <string name="input_you_bank_num">填写个人银行卡号</string>
    <string name="input_you_bank_pre_phone_num">手机号码为银行卡预留号码</string>
    <string name="mobile_num">手机号</string>
    <string name="ocr">OCR</string>
    <string name="banding_go">去绑定</string>
    <string name="real_info_check">实名认证</string>
    <string name="real_info_check_now">立即实名</string>
    <string name="real_info_check_done">已实名</string>
    <string name="banding_bank_card">绑定银行卡</string>
    <string name="highgrade_info">高级资料</string>
    <string name="real_info">实名信息</string>
    <string name="name">姓名</string>
    <string name="ID_number">身份证</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank_card_company">所属银行</string>
    <string name="bank_card_company_branch">分支行</string>
    <string name="normalgrade_info">基础资料</string>
    <string name="mobile">手机号码</string>
    <string name="business_city">业务城市</string>
    <string name="agent">客户经理</string>
    <string name="agent_mobile">客户经理电话</string>
    <string name="welcome_login_app">欢迎登录评估神</string>
</resources>