<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_timer_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:background="@color/blue">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_2x"
        android:padding="@dimen/activity_vertical_margin"
        android:src="@drawable/ico_cancel_white" />

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_cancel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_2x"
        android:layout_marginRight="@dimen/activity_horizontal_margin_2x"
        android:layout_marginTop="@dimen/activity_vertical_margin_2x"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:visibility="gone"
            style="@style/textfont_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/welcome_login_app"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mobile"
                android:inputType="number"
                android:maxEms="11"
                android:maxLength="11"
                android:text="13727891455"
                android:paddingBottom="@dimen/activity_vertical_margin_small"
                app:met_baseColor="@color/white"
                app:met_clearButton="true"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="true"
                app:met_singleLineEllipsis="@bool/met_edit_singleLineEllipsis"
                app:met_textColor="@color/white"
                app:met_textColorHint="@color/text_color_trans"
                app:met_underlineColor="@color/white" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignBottom="@+id/mobile"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                android:background="@color/white_bg_trans" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_small">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:text="123456"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/activity_vertical_margin_small"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_hideUnderline="true"
                app:met_singleLineEllipsis="@bool/met_edit_singleLineEllipsis"
                app:met_textColor="@color/white"
                app:met_textColorHint="@color/text_color_trans"
                app:met_underlineColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignBottom="@+id/password"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                android:background="@color/white_bg_trans" />

            <ImageView
                android:id="@+id/iv_hide_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/password"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                android:layout_marginRight="7dp"
                android:padding="@dimen/activity_vertical_margin_small"
                android:src="@drawable/ico_hide_mony_white" />
        </RelativeLayout>


        <TextView
            android:id="@+id/forget_pwd_button"
            style="@style/textfont_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:foregroundGravity="center_vertical"
            android:gravity="right"
            android:text="@string/action_forget_pwd"
            android:textColor="@color/gray_e6" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:focusableInTouchMode="true"
            android:background="@drawable/round_conner_bg_color_primary"
            android:text="@string/action_sign_in"
            android:textSize="16sp" />

    </LinearLayout>



</RelativeLayout>